refactor: simplify list collection in MemoryPressureService